[gd_scene load_steps=4 format=3 uid="uid://djn5dovqqho8d"]

[ext_resource type="Script" path="res://Scripts/Home.gd" id="1_ak06k"]
[ext_resource type="Theme" uid="uid://b04o156jylne1" path="res://Themes/UItheme.tres" id="2_y1rub"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1kkb"]
bg_color = Color(0.267104, 0.784275, 0.638773, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Home" type="Node2D"]
script = ExtResource("1_ak06k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="btPlay" type="Button" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_y1rub")
theme_override_font_sizes/font_size = 48
text = "Jogar"

[node name="btStages" type="Button" parent="CanvasLayer/Control/btPlay"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 42.0
offset_top = -48.0
offset_right = 226.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_y1rub")
theme_override_font_sizes/font_size = 24
text = "Fases"

[node name="BtLogin" type="Button" parent="CanvasLayer/Control/btPlay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = 65.0
offset_right = 136.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 0
text = "Login com Google Play"

[node name="Button" type="Button" parent="CanvasLayer/Control/btPlay"]
layout_mode = 0
offset_left = -226.0
offset_top = 27.0
offset_right = -42.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 24
text = "COnfigs"

[node name="BtRMData" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 80.0
grow_horizontal = 0
text = "Remove Data"

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -144.0
offset_right = -28.0
offset_bottom = -43.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_y1rub")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_q1kkb")
text = "Remover ADs"

[connection signal="pressed" from="CanvasLayer/Control/btPlay/BtLogin" to="." method="_on_bt_login_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BtRMData" to="." method="_on_bt_rm_data_pressed"]
